inits app cont.